fix: fixes inputs on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -152,7 +152,7 @@ input {
 }
 
 .form-field__short {
-  width: 32%;
+  width: 27%;
   margin-right: 3%;
   box-sizing: border-box;
 }
